# deeplearning-with-claude

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: AUTHORS.md  team.md
.claude/agents/: cloud.md  compute.md  dataloader.md  datasets.md  expert.md  frontend.md  localstack.md  manager.md  metrics.md  models.md  network.md  runner.md  server.md  supervisor.md  tests.md  trainer.md  transforms.md
.cursor/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  epic.md  feature_request.md  spike.md  user_story.md
.github/prompts/: cloud.prompt.md  compute.prompt.md  dataloader.prompt.md  datasets.prompt.md  expert.prompt.md  frontend.prompt.md  localstack.prompt.md  metrics.prompt.md  models.prompt.md  network.prompt.md  runner.prompt.md  supervisor.prompt.md  tests.prompt.md  trainer.prompt.md  transforms.prompt.md
.github/workflows/: deploy-pages.yml
apps/: global.css  index.html
apps/multimodal/: vision-language.html
apps/text/: textclassification.html
apps/vision/: imageclassification.html
docs/adr/: 001-agile-methodology.md  README.md  template.md
docs/sprints/: README.md
prompt-templates/: README.md  finetuning-prompts.md  interface-prompts.md  multimodal-prompts.md  nlp-prompts.md  pretraining-prompts.md  test-prompts.md  vision-prompts.md
prompt-templates/finetuning-prompts/: README.md  domain-adaptation.md  full-finetuning.md  instruction-tuning.md  parameter-efficient-finetuning.md
prompt-templates/interface-prompts/: README.md  data-annotation-studio.md  dataset-explorer-interface.md  experiment-reproducibility-hub.md  hyperparameter-optimization-visualizer.md  inference-api-testing-console.md  ml-model-playground.md  model-comparison-matrix.md  model-deployment-monitor.md  training-progress-dashboard.md
prompt-templates/multimodal-prompts/: README.md  audio-visual-speech-recognition.md  document-understanding.md  image-captioning.md  vision-language-understanding.md  visual-question-answering.md
prompt-templates/nlp-prompts/: README.md  text-generation.md  (+3 more)
prompting-guide/: 01-foundation.md  02-chain-of-thought.md  03-react-framework.md  04-hybrid-techniques.md  05-pytorch-automation.md  06-mle-learning-path.md  README.md
src/: compute.py  data.py  network.py  runner.py  server.py  trainer.py
(+23 files in other folders)
